# rvemu

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  USAGE.md  build_tests.sh  count.csv  count.txt  extract_text.sh  firebase.json  hello  kernel  kernel.text  rename_tests.sh  rvemu.dtb  rvemu.dts  rvemu.out  virt.dtb  virt.dts  wasm-pack.yml
.github/workflows/: test.yml
examples/: echoback  echoback.c  echoback.s  echoback.text  echoback_0x8000000  fib  fib.c  fib_easy  fib_easy.c  fib_easy.s  fib_easy.text  loop  loop.s  loop.text  simple  simple.s  simple.text  xv6-kernel  xv6-kernel.text
lib/rvemu-cli/: Cargo.toml  LICENSE
lib/rvemu-cli/src/: main.rs  stdio.rs
lib/rvemu-core/: Cargo.toml
lib/rvemu-wasm/: Cargo.toml
public/: index.html  index.js  input.js  package-lock.json  package.json  worker.js  xv6-worker.js  xv6.html  xv6.js
public/apps/: echoback.text
riscv-tests/benchmarks/: dhrystone.riscv  dhrystone.riscv.dump  median.riscv  median.riscv.dump  mm.riscv  mm.riscv.dump  mt-matmul.riscv  mt-matmul.riscv.dump  mt-vvadd.riscv  mt-vvadd.riscv.dump  multiply.riscv  multiply.riscv.dump  pmp.riscv  pmp.riscv.dump  qsort.riscv  qsort.riscv.dump  rsort.riscv  rsort.riscv.dump  spmv.riscv  spmv.riscv.dump  towers.riscv  towers.riscv.dump  vvadd.riscv  vvadd.riscv.dump
riscv-tests/isa/: rv32mi-p-breakpoint  rv32mi-p-breakpoint.dump  rv32mi-p-csr  rv32mi-p-csr.dump  rv32mi-p-illegal  rv32mi-p-ma_addr  rv32mi-p-ma_addr.dump  rv32mi-p-ma_fetch  rv32mi-p-ma_fetch.dump  rv32mi-p-mcsr  rv32mi-p-mcsr.dump  rv32mi-p-sbreak  rv32mi-p-scall  rv32mi-p-shamt  rv32mi-p-shamt.dump  rv32si-p-csr  rv32si-p-csr.dump  rv32si-p-dirty  rv32si-p-dirty.dump  rv32si-p-ma_fetch  rv32si-p-ma_fetch.dump  rv32si-p-sbreak  rv32si-p-sbreak.dump  rv32si-p-scall  rv32si-p-scall.dump  rv32si-p-wfi  rv32si-p-wfi.dump  rv32ua-p-amoadd_w  rv32ua-p-amoadd_w.dump  rv32ua-p-amoand_w  rv32ua-p-amoand_w.dump  rv32ua-p-amomax_w  rv32ua-p-amomax_w.dump  rv32ua-p-amomaxu_w  rv32ua-p-amomaxu_w.dump  rv32ua-p-amomin_w  (+616 more)
sample_binary/: aaaaaaaa  fib.asm  fib.cpp  hello  hello.c  hello.text  hello_text  jal_x31_0x100800  sb_lb
src/: bus.rs  cpu.rs  csr.rs  dram.rs  dts.rs  elf.rs  emulator.rs  exception.rs  interrupt.rs  lib.rs  memory.rs  mmu.rs  rom.rs
tests/: debug.rs  exception.rs  helper.rs  instructions.rs  isa.rs  rv32d.rs  rv32f.rs  rv32i.rs  rv32m.rs  rv64_user.rs  rv64_user_p.rs  rv64d.rs  rv64f.rs  rv64i.rs  rv64m.rs  rv64ui.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.dev.js  webpack.prod.js
(+532 files in other folders)
