[package]
name = "rvemu"
description = "RISC-V emulator core implementation."
version = "0.0.4"
authors = ["Asami Doi <d0iasm.pub@gmail.com>"]
edition = "2018"
repository = "https://github.com/d0iasm/rvemu"
license = "MIT"
keywords = ["riscv", "risc-v", "emulator"]
categories = ["emulators", "simulation"]
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "src/**/*",
  "LICENSE",
  "Makefile",
  "README.md",
]

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
  "lib/rvemu-cli",
  "lib/rvemu-wasm",
]

[profile.release]
#opt-level = 3
opt-level = 0
